--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -64,7 +64,7 @@ h3
 		family: $proxima_nova
 		size: em(20px)
 		weight: 700
-	letter-spacing: 0.4px
+	letter-spacing: 0.2px
 	color: $black_font
 
 body
@@ -76,6 +76,10 @@ body
 	line-height: 1.7
 	font-family: $proxima_nova
 	overflow-x: hidden
+
+.tiny_text
+	font-size: em(11px)
+	color: $grey_font
 
 a
 	text-decoration: none
