--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -21,6 +21,7 @@
 @import "pages/product_page"
 @import "pages/articles"
 @import "pages/article_page"
+@import "pages/prices"
 
 //media
 @import "media"
