--- a/app/sass/pages/_prices.sass
+++ b/app/sass/pages/_prices.sass
@@ -20,7 +20,7 @@
 
 .left_furniture_prices
   position: relative
-  height: 740px
+  height: 620px
   background-image: url(../img/prices/ic_furniture_big.svg), linear-gradient(to right, #565D65 0%, #565D65 100%)
   background-repeat: no-repeat
   background-size: inherit
@@ -73,6 +73,9 @@
   column-count: 2
   column-gap: 20px
   padding: 20px 50px
+
+  h3
+    margin: 0
 
 .content_wood_prices
   column-count: 1
