added js for tabs

--- a/app/sass/pages/_prices.sass
+++ b/app/sass/pages/_prices.sass
@@ -81,6 +81,18 @@
   column-count: 1
   padding: 20px 50px
 
+.divider,
+  opacity: 0
+
+  @media only screen and (max-width : 480px)
+    display: none
+
+.divider_kitchen
+  opacity: 0
+  display: none
+
+  @media only screen and (max-width : 480px)
+    display: block
 
 //table
 .rwd-table
