--- a/app/sass/pages/_catalog.sass
+++ b/app/sass/pages/_catalog.sass
@@ -37,7 +37,7 @@
     float: left
 
     .tab
-      opacity: 0.7
+      opacity: 1
       height: 155px
       padding: 9%
       transition: all 0.3s ease
@@ -45,10 +45,6 @@
         background-color: white
         cursor: pointer
         opacity: 1
-
-    .tab_selected
-      background-color: white
-      opacity: 1
 
     .tab_icons_wrapper
       float: left
@@ -66,9 +62,13 @@
         font:
           size: em(13px)
 
+.current
+  background-color: white
+  opacity: 1
+
 .catalog_gallery
   padding-top: 70px
-  display: flex
+  display: none
   flex-wrap: wrap
   justify-content: center
 
@@ -90,3 +90,15 @@
   .g_title
     text-align: center
     padding-top: 20px
+
+@keyframes gallery_show
+  from
+    opacity: 0
+    margin-top: 15px
+  to
+    opacity: 1
+    margin-top: 0
+
+.gallery_selected
+  display: flex
+  animation: gallery_show 600ms cubic-bezier(0.645, 0.045, 0.355, 1)
