--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -270,6 +270,9 @@
 
 @media only screen and (max-width : 480px)
 
+	.head_content_wrapper h1
+		padding: 0
+
 	//prices
 	.doors_prices, .furniture_prices, .stairs_prices, .wood_prices
 		margin: 0 -15px 30px
