--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -12,7 +12,8 @@
 //csslibs
 @import "csslibs/slick"
 @import "csslibs/font-awesome/font-awesome"
-@import app/libs/magnific_popup/magnific-popup.sass
+@import "app/libs/magnific_popup/magnific-popup.sass"
+// @import "app/sass/csslibs/animsition.sass"
 
 //pages
 @import "pages/lp"
