--- a/app/sass/pages/_product_page.sass
+++ b/app/sass/pages/_product_page.sass
@@ -55,3 +55,12 @@
 .you_also_like_wrapper
   padding-top: 70px
   text-align: center
+
+.you_also_like_products
+  padding-top: 70px
+  display: flex
+  flex-wrap: wrap
+  justify-content: center
+
+  .g_img_wrapper
+    padding-bottom: 70px
