--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -17,20 +17,24 @@ header
 nav
   top: 20px
   z-index: 1
-  a
-    color: white
-    font-size: em(15px)
-    text-decoration: none
-    letter-spacing: 0.3px
-    line-height: 27px
-    font-weight: 700
-    display: block
-    float: left
-    width: 50%
-    transition: 0.3s
+  ul
+    margin: 0
+    padding: 0
+    li
+      display: block
+      float: left
+      width: 50%
+      transition: 0.3s
+      a
+        color: white
+        font-size: em(15px)
+        text-decoration: none
+        letter-spacing: 0.3px
+        line-height: 27px
+        font-weight: 700
 
-    &:hover
-      color: $accent
+        &:hover
+          color: $accent
 
 .phone_wrapper
   top: 30px
