added pop up normal

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -100,6 +100,10 @@
 
 @media only screen and (max-width : 767px)
 
+	//order sent
+	.order_sent_pop2_wrapper
+		width: 77%
+
 	//prices
 	.doors_prices, .furniture_prices, .stairs_prices, .wood_prices
 		margin: 0 -15px 70px
@@ -274,6 +278,10 @@
 	    size: em(15px)
 
 @media only screen and (max-width : 480px)
+
+	//order sent
+	.order_sent_pop2_wrapper
+		width: 87%
 
 	//notification
 	.order_sent_pop
