--- a/app/sass/modules/_order_bottom_block.sass
+++ b/app/sass/modules/_order_bottom_block.sass
@@ -1,3 +1,22 @@
+.order_sent_pop2_wrapper
+  display: none
+  z-index: 9999
+  position: absolute
+  width: 67%
+  margin: 0 auto
+  padding-top: 40px
+  transition: 0.3s
+
+  .order_sent_pop2
+    text-align: center
+    background-color: transparent
+    position: relative
+    display: table
+    margin: 0 auto
+
+    span, h3
+      color: white
+
 .order_bottom_block
   background-color: $dark-bg
 
@@ -13,6 +32,7 @@
   padding: 70px 100px
   max-width: 600px
   margin: 0 auto
+  position: relative
   border-bottom: 1px  solid #3D5352
 
 .name
