--- a/app/sass/pages/_lp.sass
+++ b/app/sass/pages/_lp.sass
@@ -1,44 +1,26 @@
-.button_default
+.button_default, .button_default2
   z-index: 9999
   position: absolute
 
-.order_sent_pop
-  text-align: center
-  background-color: #fff
+.order_sent_pop_wrapper
+  position: absolute
+  width: 77%
   display: none
-  position: relative
   z-index: 9999
-  height: 60px
-  padding-top: 15px
+  transition: 0.3s
 
-  img
+  .order_sent_pop
+    text-align: center
+    background-color: #fff
     position: relative
-    left: 20px
+    height: 200px
+    width: 230px
+    display: table
+    padding-top: 95px
+    margin: 0 auto
 
-  .ic_close_pop
-    outline: none
-    float: right
-    position: relative
-    overflow: visible
-    cursor: pointer
-    background: 0 0
-    border: 0
-    -webkit-appearance: none
-    display: block
-    -webkit-box-shadow: none
-    touch-action: manipulation
-    width: 44px
-    height: 44px
-    line-height: 44px
-    right: 10px
-    top: -10px
-    opacity: .65
-    color: #333
-    font-style: normal
-    font-size: 28px
-    font-family: Arial
-    &:hover
-      opacity: 1
+    img
+      margin-bottom: 30px
 
 .img_wrapper
   width: 100px
