--- a/app/sass/pages/_catalog.sass
+++ b/app/sass/pages/_catalog.sass
@@ -86,7 +86,6 @@
       box-shadow: 0px 5px 21px -5px rgba(0,0,0,0.3)
       opacity: 1
 
-
   .g_title
     text-align: center
     padding-top: 20px
@@ -102,3 +101,17 @@
 .gallery_selected
   display: flex
   animation: gallery_show 600ms cubic-bezier(0.645, 0.045, 0.355, 1)
+
+.big_number_wrapper
+  position: absolute
+  width: 100%
+  height: 100%
+  text-align: center
+
+.big_number
+  position: relative
+  color: rgba(18,45,44,0.04)
+  font-weight: 700
+  font-size: 180px
+  top: -115px
+  left: -50px
