--- a/app/sass/pages/_product_page.sass
+++ b/app/sass/pages/_product_page.sass
@@ -64,3 +64,18 @@
 
   .g_img_wrapper
     padding-bottom: 70px
+    margin-right: 30px
+    margin-left: 30px
+    transition: 0.3s
+
+  .g_title
+    text-align: center
+    padding-top: 20px
+
+  .g_img
+    transition: 0.3s
+    opacity: 0.95
+
+    &:hover
+      box-shadow: 0px 5px 21px -5px rgba(0,0,0,0.3)
+      opacity: 1
